--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div id="container">
-        <h3>Activate Sasageyo on this page</h3>
+        <h3>SASAGEYO</h3>
+        <!--<h3>Activate Sasageyo on this page</h3>
         <label class="switch">
             <input type="checkbox" id="check-box">
             <span class="slider round"></span>
-        </label>
+        </label>-->
 
     </div>
     <script src="/scripts/popup.js"></script>
